oci/valkey-operator/policies/valkey-operator-policies.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: valkey-operator-metrics
  namespace: valkey-operator-system
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: valkey-operator-metrics
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: NetworkAuthentication
      name: cluster-pods
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: valkey-operator-health
  namespace: valkey-operator-system
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: valkey-operator-health
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: NetworkAuthentication
      name: kubelet
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: valkey-operator-proxy-admin
  namespace: valkey-operator-system
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: valkey-operator-proxy-admin
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: NetworkAuthentication
      name: kubelet
